force-app/main/default/objects/LLC_BI__Linked_Context__mdt/LLC_BI__Linked_Context__mdt.object-meta.xml
<CustomObject>
    <description>This is used to create a junction between Context objects and to orchestrate the order in which they are processed.</description>
    <label>Linked Context</label>
    <pluralLabel>Linked Contexts</pluralLabel>
</CustomObject>