force-app/main/default/objects/LLC_BI__Linked_Context__mdt/fields/LLC_BI__Context_Node__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Context_Node__c</fullName>
    <description>This optional field contains a reference to a context object.</description>
    <inlineHelpText>This field contains a reference to a context object.</inlineHelpText>
    <label>Context Node</label>
    <referenceTo>LLC_BI__Context__mdt</referenceTo>
    <relationshipLabel>Linked Contexts (Context Node)</relationshipLabel>
    <relationshipName>Linked_Contexts</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>