force-app/main/default/objects/LLC_BI__Linked_Context__mdt/fields/LLC_BI__Joining_Context__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Joining_Context__c</fullName>
    <description>This optional field contains a reference to a context object that is intended to be joined to the Context_Node.</description>
    <inlineHelpText>This field contains a context object to be joined to the object in Context_Node</inlineHelpText>
    <label>Joining Context</label>
    <referenceTo>LLC_BI__Context__mdt</referenceTo>
    <relationshipLabel>Linked Contexts (Joining Context)</relationshipLabel>
    <relationshipName>Joining_Contexts</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>