force-app/main/default/objects/LLC_BI__Linked_Context__mdt/fields/LLC_BI__Next_Context__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Next_Context__c</fullName>
    <description>This optional field contains a reference to a Context__mdt object that will come after the current Context__mdt.</description>
    <inlineHelpText>This field contains a Context__mdt object that will come next after the current Context_Node is processed.</inlineHelpText>
    <label>Next Context</label>
    <referenceTo>LLC_BI__Context__mdt</referenceTo>
    <relationshipLabel>Linked Contexts (Next Context)</relationshipLabel>
    <relationshipName>Next_Contexts</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>